--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "RUSTGeneticAlgorithm"]
 	path = RUSTGeneticAlgorithm
 	url = https://github.com/mcleantom/RUSTGeneticAlgorithm.git
+[submodule "RUSTAStar2D"]
+	path = RUSTAStar2D
+	url = https://github.com/mcleantom/RUSTAStar2D.git
